k8s/applications/business/messages/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: messages
  labels:
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
