k8s/applications/business/messages/service-route.yaml
apiVersion: v1
kind: Service
metadata:
  name: messages
  namespace: messages
spec:
  selector:
    app.kubernetes.io/name: messages-web
  ports:
    - name: http
      port: 80
      targetPort: http
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: messages
  namespace: messages
spec:
  parentRefs:
    - name: external
      namespace: gateway
    - name: internal
      namespace: gateway
  hostnames:
    - messages.smadja.dev
  rules:
    - backendRefs:
        - name: messages
          port: 80
